Basic automated themse working

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -5,26 +5,26 @@
 <div class="row">
     <div class="col-md-4">
         <h1 class="music">Music</h1>
-        <p class="blog">Are you learning to partner dance and looking for practice music?  Or are you choreographing a piece and looking for new ideas for music?  Our <a href="/home/dances">dances page</a> is a catalog of music indexed by dance type that will show you a list of songs appropriate for a particular style.  Or go directly to our <a href="/Songs">database of songs</a> and browse away.</p>
-        <p class="blog">Don't see your style of dance here? <a href="mailto:support@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
+        <p class="neutral">Are you learning to partner dance and looking for practice music?  Or are you choreographing a piece and looking for new ideas for music?  Our <a href="/home/dances">dances page</a> is a catalog of music indexed by dance type that will show you a list of songs appropriate for a particular style.  Or go directly to our <a href="/Songs">database of songs</a> and browse away.</p>
+        <p class="neutral">Don't see your style of dance here? <a href="mailto:support@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
     </div>
     <div class="col-md-4">
         <h1 class="tools">Tools</h1>        
-        <p class="blog">Do you have a favorite song (or songs) that you would like to match to a dance style?  Use our <a href="/Home/Counter">dance counter page</a> to help you answer that question.</p>
-        <p class="blog">We have more useful tools for dancers coming soon.  <a href="mailto:support@music4dance.net">Let us know</a> if you have an idea for a tool that could help music to dances or otherwise help dancers find music.</p>
+        <p class="neutral">Do you have a favorite song (or songs) that you would like to match to a dance style?  Use our <a href="/Home/Counter">dance counter page</a> to help you answer that question.</p>
+        <p class="neutral">We have more useful tools for dancers coming soon.  <a href="mailto:support@music4dance.net">Let us know</a> if you have an idea for a tool that could help music to dances or otherwise help dancers find music.</p>
     </div>
     <div class="col-md-4">
         <h1 class="blog">Info</h1>
-        <p class="blog">
+        <p class="neutral">
             Are you yooking for more information on how music relates to dance, follow our <a href="http://blog.music4dance.net">blog</a>.
         </p>
         <h4 class="blog">Introducing Blog.Music4Dance.Net</h4>
-        <p class="blog">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing.. <a href="http://blog.music4dance.net/hello-world/">Read more...</a> </p>
+        <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="http://blog.music4dance.net/hello-world/">[Read more]</a> </p>
         <h4 class="blog">The Two Questions that Inspired Music4Dance</h4>
-        <p class="blog">As a beginning ballroom dancer there were two questions that kept coming up... <a href="http://blog.music4dance.net/the-two-questions-that-inspired-music4dance/">Read more...</a> </p>
+        <p class="neutral">As a beginning ballroom dancer there were two questions that kept coming up... <a href="http://blog.music4dance.net/the-two-questions-that-inspired-music4dance/">Read more...</a> </p>
         <h4 class="blog">Question 1: I’m learning to Cha Cha, where is some great music for practicing?</h4>
-        <p class="blog">So how do I do that?  Dance generally co-evolves with music, so to get a very traditional song... <a href="http://blog.music4dance.net/the-two-questions-that-inspired-music4dance/">Read more...</a> </p>
+        <p class="neutral">So how do I do that?  Dance generally co-evolves with music, so to get a very traditional song... <a href="http://blog.music4dance.net/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
         <h4 class="blog">Question 2: What dance styles can I dance to my favorite song(s)?</h4>
-        <p class="blog">One of the things that amazes me about the best dance teachers... <a href="http://blog.music4dance.net/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">Read more...</a></p>
+        <p class="neutral">One of the things that amazes me about the best dance teachers... <a href="http://blog.music4dance.net/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">[Read more]</a></p>
     </div>
 </div>
