--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -93,7 +93,7 @@ table.songlist
     font-size: 1.2em;
 }
 
-.calculator
+/*.calculator
 {
     display: inline;
     font-size: large;
@@ -108,24 +108,6 @@ table.songlist
     vertical-align: middle;
     border: 4px solid;
     border-radius: 3px;
-}
-
-/*.calculator
-{
-    display: inline;
-    font-size: large;
-    font-weight:bold;
-    padding: 3px 6px;
-    color: #ef8900;
-    background-color: #fff;
-    border-color: #cc7a00;
-    line-height: 1.42857143;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    border: 4px solid;
-    border-radius: 3px;
-}
 
 .music
 {
@@ -139,8 +121,9 @@ table.songlist
 
 .blog
 {
-    color: #555555;
-}*/
+    color: #001671;
+}
+*/
 
 #mt
 {
