Fix a broken link on the home page + enable de-theming with the new stuff

--- a/DanceCalc/m4d/Content/bootstrap/admin-theme.less
+++ b/DanceCalc/m4d/Content/bootstrap/admin-theme.less
@@ -1,6 +1,6 @@
 ﻿@import "bootstrap.less";
 @import "color-nav.less";
 
-@gray-darker: @admin-color;
+@gray-base: @admin-color;
 
 @import "m4d-custom.less";
