--- a/DanceCalc/m4d/Content/bootstrap/blog-theme.less
+++ b/DanceCalc/m4d/Content/bootstrap/blog-theme.less
@@ -1,7 +1,7 @@
 ﻿@import "bootstrap.less";
 @import "color-nav.less";
 
-@gray-darker: @blog-color;
+@gray-base: @blog-color;
 
 @import "m4d-custom.less";
 
