--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-4">
         <h1 class="music">Music</h1>
-        <p class="neutral">Are you learning to partner dance and looking for practice music?  Or are you choreographing a piece and looking for new ideas for music?  Our <a href="/home/dances">dances page</a> is a catalog of music indexed by dance type that will show you a list of songs appropriate for a particular style.  Or go directly to our <a href="/Songs">database of songs</a> and browse away.</p>
+        <p class="neutral">Are you learning to partner dance and looking for practice music?  Or are you choreographing a piece and looking for new ideas for music?  Our <a href="/home/dances">dances page</a> is a catalog of music indexed by dance type that will show you a list of songs appropriate for a particular style.  Or go directly to our <a href="/Song">database of songs</a> and browse away.</p>
         <p class="neutral">Don't see your style of dance here? <a href="mailto:support@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
     </div>
     <div class="col-md-4">
@@ -21,7 +21,7 @@
         <h4 class="blog">Introducing Blog.Music4Dance.Net</h4>
         <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="http://blog.music4dance.net/hello-world/">[Read more]</a> </p>
         <h4 class="blog">The Two Questions that Inspired Music4Dance</h4>
-        <p class="neutral">As a beginning ballroom dancer there were two questions that kept coming up... <a href="http://blog.music4dance.net/the-two-questions-that-inspired-music4dance/">Read more...</a> </p>
+        <p class="neutral">As a beginning ballroom dancer there were two questions that kept coming up... <a href="http://blog.music4dance.net/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
         <h4 class="blog">Question 1: I’m learning to Cha Cha, where is some great music for practicing?</h4>
         <p class="neutral">So how do I do that?  Dance generally co-evolves with music, so to get a very traditional song... <a href="http://blog.music4dance.net/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
         <h4 class="blog">Question 2: What dance styles can I dance to my favorite song(s)?</h4>
