--- a/DanceCalc/m4d/Content/bootstrap/music-theme.less
+++ b/DanceCalc/m4d/Content/bootstrap/music-theme.less
@@ -1,6 +1,6 @@
 ﻿@import "bootstrap.less";
 @import "color-nav.less";
 
-@gray-darker: @music-color;
+@gray-base: @music-color;
 
 @import "m4d-custom.less";
