--- a/DanceCalc/m4d/Content/bootstrap/m4d-custom.less
+++ b/DanceCalc/m4d/Content/bootstrap/m4d-custom.less
@@ -1,4 +1,4 @@
-﻿@gray-darker:            lighten(#000, 13.5%); // #222
+﻿/*@gray-darker:            lighten(#000, 13.5%); // #222
 @gray-dark:              lighten(#000, 20%);   // #333
 @gray:                   lighten(#000, 33.5%); // #555
 @gray-light:             lighten(#000, 46.7%); // #777
@@ -10,7 +10,12 @@
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
-/*// Shades of gray
+@blog-color: #000;
+@tools-color: #000;
+@music-color: #000;
+@admin-color: #000;*/
+
+// Shades of gray
 @gray-darker:            lighten(@gray-base,  0%);
 @gray-dark:              lighten(@gray-base, 10%);
 @gray:                   lighten(@gray-base, 20%);
@@ -33,12 +38,6 @@
 @tools-color: #001671;
 @music-color: #18685D;
 @admin-color: #862A08;
-*/
-
-@blog-color: #000;
-@tools-color: #000;
-@music-color: #000;
-@admin-color: #000;
 
 // Colored nav-bar
 @bgDefault      : @gray-dark;
