--- a/DanceCalc/m4d/Views/Account/Register.cshtml
+++ b/DanceCalc/m4d/Views/Account/Register.cshtml
@@ -1,6 +1,4 @@
-﻿@using Recaptcha.Web.Mvc;
-
-@model m4dModels.RegisterViewModel
+﻿@model m4dModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
@@ -34,9 +32,6 @@
                     <div class="col-md-10">
                         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
                     </div>
-                </div>
-                <div class="form-group">
-                    @Html.Recaptcha()
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
