--- a/DanceCalc/m4d/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/DanceCalc/m4d/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.Owin.Security
+﻿@model m4d.ViewModels.ExternalLoginListViewModel
+@using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
 <hr />
@@ -13,17 +14,15 @@
     }
     else
     {
-        string action = Model.Action;
-        string returnUrl = Model.ReturnUrl;
-        using (Html.BeginForm(action, "Account", new { ReturnUrl = returnUrl }))
+        using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl }))
         {
             @Html.AntiForgeryToken()
             <div id="socialLoginList">
                 <p>
-                @foreach (AuthenticationDescription p in loginProviders)
-                {
-                    <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
-                }
+                    @foreach (AuthenticationDescription p in loginProviders)
+                    {
+                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                    }
                 </p>
             </div>
         }
