--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -75,10 +75,10 @@
                         <li>@Html.ActionLink("Admin", "Index", "Admin")</li>
                     }
                 </ul>
-                @if (User.Identity != null && User.Identity.IsAuthenticated)
+                @*@if (User.Identity != null && User.Identity.IsAuthenticated)
                 {
-                    @Html.Partial("_LoginPartial")
-                }
+                }*@
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
