--- a/DanceCalc/m4d/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/DanceCalc/m4d/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model m4dModels.ExternalLoginConfirmationViewModel
+﻿@model m4d.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
@@ -11,17 +11,18 @@
 
     <h4>Association Form</h4>
     <hr />
-    @Html.ValidationSummary(true)
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p class="text-info">
         You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-            Please enter a user name for this site below and click the Register button to finish
-            logging in.
+        Please enter a user name for this site below and click the Register button to finish
+        logging in.
     </p>
     <div class="form-group">
         @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.UserName)
+            @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+            <input type="hidden" name="Email" id="Email" value="@Model.Email" />
         </div>
     </div>
     <div class="form-group">
