--- a/DanceCalc/m4d/Views/Account/ResetPassword.cshtml
+++ b/DanceCalc/m4d/Views/Account/ResetPassword.cshtml
@@ -13,7 +13,7 @@
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
     <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        <label class="col-md-2 control-label">User Name or Email</label>
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
