--- a/DanceCalc/m4d/Views/Manage/SetPassword.cshtml
+++ b/DanceCalc/m4d/Views/Manage/SetPassword.cshtml
@@ -5,8 +5,8 @@
 
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    You do not have a local password for this site. Add a local
+    password so you can log in without an external login.
 </p>
 
 @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
