--- a/DanceCalc/m4d/Views/Shared/Info.cshtml
+++ b/DanceCalc/m4d/Views/Shared/Info.cshtml
@@ -2,5 +2,5 @@
     ViewBag.Title = "Info";
 }
 
-<h2>@ViewBag.Title.</h2>
-<>@ViewBag.Message<p>
+<h2>@ViewBag.Title:</h2>
+<p>@ViewBag.Message</p>
