--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -54,6 +54,9 @@
             @Html.DisplayNameFor(model => model.UserName)
         </th>
         <th>
+            Date
+        </th>
+        <th>
             Roles
         </th>
         <th></th>
@@ -96,9 +99,12 @@
     <td>
         @Html.ActionLink(item.UserName, "Details", new { id = item.Id })
     </td>
-        <td>
-            @item.GetRoles(roles)
-        </td>
+    <td>
+        @item.GetRoles(roles)
+    </td>
+    <td>
+        @item.StartDate.ToString("d")
+    </td>
     <td>
         @Html.ActionLink("Change Roles", "ChangeRoles", new { id = item.Id }),
         @Html.ActionLink("List Songs", "FilterUser", "Song", new { user = item.UserName }, null)
