--- a/DanceCalc/m4d/Views/Shared/Error.cshtml
+++ b/DanceCalc/m4d/Views/Shared/Error.cshtml
@@ -12,7 +12,7 @@
     }
     else
     {
-        <p class="text-danger">@ViewBag.errorMessage</p>
+        <p class="text-danger">@Html.Raw(ViewBag.errorMessage)</p>
     }
 }
 
