--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -17,12 +17,6 @@
     <tr>
         @*
     <th>
-        @Html.DisplayNameFor(model => model.Email)
-    </th>
-    <th>
-        @Html.DisplayNameFor(model => model.EmailConfirmed)
-    </th>
-    <th>
         @Html.DisplayNameFor(model => model.PasswordHash)
     </th>
     <th>
@@ -37,15 +31,6 @@
     <th>
         @Html.DisplayNameFor(model => model.TwoFactorEnabled)
     </th>
-    <th>
-        @Html.DisplayNameFor(model => model.LockoutEndDateUtc)
-    </th>
-    <th>
-        @Html.DisplayNameFor(model => model.LockoutEnabled)
-    </th>
-    <th>
-        @Html.DisplayNameFor(model => model.AccessFailedCount)
-    </th>
         *@
         <th>
             LOS
@@ -54,66 +39,78 @@
             @Html.DisplayNameFor(model => model.UserName)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th>
             Date
         </th>
         <th>
             Roles
         </th>
         <th></th>
+        <th>
+            EMC
+        </th>
+        <th>
+            Lock-End
+        </th>
+        <th>
+            AFC
+        </th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         @*
-    <td>
-        @Html.DisplayFor(modelItem => item.Email)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.EmailConfirmed)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.PasswordHash)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.SecurityStamp)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.PhoneNumber)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.AccessFailedCount)
-    </td>
-        *@
-    <td>
-        @Html.DisplayFor(modelItem => item.LockoutEnabled)
-    </td>
-    <td>
-        @Html.ActionLink(item.UserName, "Details", new { id = item.Id })
-    </td>
-    <td>
-        @item.GetRoles(roles)
-    </td>
-    <td>
-        @item.StartDate.ToString("d")
-    </td>
-    <td>
-        @Html.ActionLink("Change Roles", "ChangeRoles", new { id = item.Id }),
-        @Html.ActionLink("List Songs", "FilterUser", "Song", new { user = item.UserName }, null)
-@*
-    @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-    @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-    @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-*@
-    </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PasswordHash)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.SecurityStamp)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PhoneNumber)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
+        </td>
+            *@
+        <td>
+            @Html.DisplayFor(modelItem => item.LockoutEnabled)
+        </td>
+        <td>
+            @Html.ActionLink(item.UserName, "Details", new { id = item.Id })
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Email)
+        </td>
+        <td>
+            @item.StartDate.ToString("d")
+        </td>
+        <td>
+            @item.GetRoles(roles)
+        </td>
+        <td>
+            @Html.ActionLink("Change Roles", "ChangeRoles", new { id = item.Id }),
+            @Html.ActionLink("List Songs", "FilterUser", "Song", new { user = item.UserName }, null),
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+    @*
+        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+    *@
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.EmailConfirmed)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AccessFailedCount)
+        </td>
     </tr>
 }
 
