--- a/DanceCalc/m4d/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/DanceCalc/m4d/Views/Account/ExternalLoginConfirmation.cshtml
@@ -7,6 +7,7 @@
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
+    bool showEmail = string.IsNullOrWhiteSpace(@Model.Email) || !string.IsNullOrWhiteSpace(@Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" }).ToString());
     @Html.AntiForgeryToken()
 
     <h4>Association Form</h4>
@@ -22,16 +23,30 @@
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-            <input type="hidden" name="Email" id="Email" value="@Model.Email" />
+            @if (!showEmail)
+            {
+                <input type="hidden" name="Email" id="Email" value="@Model.Email" />
+            }
         </div>
     </div>
+    if (showEmail)
+    {
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+            </div>
+            }
+        </div>
+    }
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
-}
+    }
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
