--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -51,6 +51,7 @@
         <li>@Html.ActionLink("Seed the Datbase", "SeedDatabase")</li>
         <li>@Html.ActionLink("Rerun seed function", "Reseed")</li>
         <li>@Html.ActionLink("Upload Catalog", "UploadCatalog")</li>
+        <li>@Html.ActionLink("Upload Catalog (Ithaca)", "UploadCatalog", new {separator="ITC", headers="TEMPO,TITLE,ARTIST",user="ithaca"})</li>
         <li>@Html.ActionLink("Upload Album", "UploadCatalog", new { headers="Title", separator=@"\t" })</li>
     }
 </ul>
