--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -59,6 +59,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Counter", "Counter", "Home")</li>
+                            <li>@Html.ActionLink("Tempoes", "Tempoes", "Home")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
