Pink Martini postlet + typo fixes on main page

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -11,12 +11,12 @@
     <div class="col-md-4">
         <h1 class="tools">Tools</h1>        
         <p class="neutral">Do you have a favorite song (or songs) that you would like to match to a dance style?  Use our <a href="/Home/Counter">dance counter page</a> to help you answer that question.</p>
-        <p class="neutral">We have more useful tools for dancers coming soon.  <a href="mailto:support@music4dance.net">Let us know</a> if you have an idea for a tool that could help music to dances or otherwise help dancers find music.</p>
+        <p class="neutral">We have more useful tools for dancers coming soon.  <a href="mailto:support@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.</p>
     </div>
     <div class="col-md-4">
         <h1 class="blog">Info</h1>
         <p class="neutral">
-            Are you yooking for more information on how music relates to dance, follow our <a href="http://blog.music4dance.net">blog</a>.
+            Are you looking for more information on how music relates to dance, follow our <a href="http://blog.music4dance.net">blog</a>.
         </p>
         <h4 class="blog">Introducing Blog.Music4Dance.Net</h4>
         <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="http://blog.music4dance.net/hello-world/">[Read more]</a> </p>
@@ -26,5 +26,7 @@
         <p class="neutral">So how do I do that?  Dance generally co-evolves with music, so to get a very traditional song... <a href="http://blog.music4dance.net/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
         <h4 class="blog">Question 2: What dance styles can I dance to my favorite song(s)?</h4>
         <p class="neutral">One of the things that amazes me about the best dance teachers... <a href="http://blog.music4dance.net/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">[Read more]</a></p>
+        <h4 class="blog">The Pink Martini Solution</h4>
+        <p class="neutral">Not all artists are created equal when it comes to creating dance-able music.  For instance... <a href="http://blog.music4dance.net/the-pink-martini-solution/">[Read more]</a></p>
     </div>
 </div>
