Improve incremental upload and add in motown

--- a/DanceCalc/m4d/Views/Home/Dances.cshtml
+++ b/DanceCalc/m4d/Views/Home/Dances.cshtml
@@ -7,7 +7,7 @@
     <h2>Dances</h2>
 </hgroup>
 @{
-    string[] boxes = { "LTN", "SWG", "FXT", "TNG", "MSC", "WLZ"};
+    string[] boxes = { "LTN", "SWG", "TNG", "WLZ", "FXT", "MSC" };
 }
 
 <div class="row">
