Get filtering working on tempo page as well as a bit of formatting improvement.

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -206,3 +206,6 @@ table.songlist
 
 h1, h2, h3, h4, h5, h6 { font-family: "Merienda";font-weight: 700 }
 
+.filter-button {
+    margin: 10px 10px;
+}
