--- a/DanceCalc/m4d/Views/Home/Tempoes.cshtml
+++ b/DanceCalc/m4d/Views/Home/Tempoes.cshtml
@@ -1,26 +1,93 @@
-﻿@{
+﻿@model DanceLibrary.Dances
+
+@{
     ViewBag.Title = "Tempoes";
+    var styles = new KeyValuePair<string, string>[] {
+        new KeyValuePair<string,string>("all","All Styles"),
+        new KeyValuePair<string,string>("is","International Standard"),
+        new KeyValuePair<string,string>("il","International Latin"),
+        new KeyValuePair<string,string>("as","American Smooth"),
+        new KeyValuePair<string,string>("ar","American Rhythm"),
+        new KeyValuePair<string,string>("s","Social")
+    };
 }
 
-<table class="table table-striped table-bordered">
-    <thead>
-        <tr data-bind="foreach: headers">
-            <td><a data-bind ="click: $parent.sort, text: title" class="btn-link"></a></td>
-        </tr>
-    </thead>
-    <tbody data-bind="foreach: dances">
-        <tr>
-            <td data-bind="text: Name"></td>
-            <td align="center"><span data-bind="text: Meter.Numerator"></span>/<span data-bind="text: Meter.Denominator"></span></td>
-            <td align="center" data-bind="text: tempoMPM"></td>
-            <td align="center" data-bind="text: tempoBPM"></td>
-            <td data-bind="text: GroupName"></td>
-            <td data-bind="text: styles"></td>
-        </tr>
-    </tbody>
-</table>
+<div class="row">
+    <div class="dropdown col-md-4">
+        <a id="filter-style" role="button" data-toggle="dropdown" data-target="#" href="/tempoes" class="btn btn-info btn-block filter-button">
+            All Styles <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="filter-style">
+            @foreach (var element in styles)
+            {
+                string id = "filter-style-" + element.Key;
+                <li><a id="@id" href="#">@element.Value</a></li>
+            }
+        </ul>
+    </div>
+    <div class="dropdown col-md-4">
+        <a id="filter-meter" role="button" data-toggle="dropdown" data-target="#" href="/tempoes" class="btn btn-info btn-block filter-button">
+            All Meters <span class=" caret"></span>
+        </a>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="filter-meter">
+            <li><a id="filter-meter-1" href="#">All Meters</a></li>
+            <li><a id="filter-meter-2" href="#">2/4 MPM</a></li>
+            <li><a id="filter-meter-3" href="#">3/4 MPM</a></li>
+            <li><a id="filter-meter-4" href="#">4/4 MPM</a></li>
+        </ul>
+    </div>
+    <div class="dropdown col-md-4">
+        <a id="filter-type" role="button" data-toggle="dropdown" data-target="#" href="/tempoes" class="btn btn-info btn-block filter-button">
+            All Types <span class=" caret">
+            </span>
+        </a>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="filter-type">
+            <li><a id="filter-type-ALL" href="#">All Types</a></li>
+            @foreach (var item in Model.AllDanceGroups)
+            {
+                string id = "filter-type-" + item.Id;
+                <li><a id="@id" href="#">@item.Name</a></li>
+            }
+        </ul>
+    </div>
+</div>
+
+<div class="row">
+    <table class="table table-striped table-bordered col-md-12">
+        <thead>
+            <tr data-bind="foreach: headers">
+                <td><a data-bind="click: $parent.sort, text: title" class="btn-link"></a></td>
+            </tr>
+        </thead>
+        <tbody data-bind="foreach: filteredDances">
+            <tr>
+                <td data-bind="text: Name"></td>
+                <td align="center"><span data-bind="text: Meter.Numerator"></span>/<span data-bind="text: Meter.Denominator"></span></td>
+                <td align="center" data-bind="text: tempoMPM"></td>
+                <td align="center" data-bind="text: tempoBPM"></td>
+                <td data-bind="text: GroupName"></td>
+                <td data-bind="text: styles"></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
 @section Scripts {
+    <script>
+        var danceTypes = [
+            {id: "ALL", name: "All Types"},
+            @foreach (var item in Model.AllDanceGroups)
+            {
+                <text>{id:"@item.Id",name:"@item.Name"},</text>
+            }
+        ];
+        var danceStyles = [
+            @foreach (var item in styles)
+            {
+                <text>{ id: "@item.Key", name: "@item.Value" },</text>
+            }
+        ];
+    </script>
     @{
         string pageScript = "~/Scripts/tempoes.js" + Page.ScriptQualifier;
     }
