Bot for adding dance groups and subclassing.  Also break up batching when uploading data as we appeared to be overloading EF and/or SQL Azure

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -25,6 +25,8 @@
     <li>@Html.ActionLink("Fix up Artists", "FixArtists")</li>
     <li>@Html.ActionLink("Update Albums", "UpdateAlbums")</li>
     <li>@Html.ActionLink("Update Tag Types", "UpdateTagTypes")</li>
+    <li>@Html.ActionLink("Add Dance Groups", "AddDanceGroups")</li>
+    <li>@Html.ActionLink("Infer Dance Types", "InferDanceTypes")</li>
     <li>@Html.ActionLink("Clear Song Cache", "ClearSongCache")</li>
 </ul>
 
