Refactor DanceMusicContext into a context, service, and interface.  This allows us to do true mocking of the dbsets and push the service down into the model assembly.  I should now be able to write tests against 90% of what used to be in the dbcontext.

--- a/DanceCalc/m4d/Views/Home/Dances.cshtml
+++ b/DanceCalc/m4d/Views/Home/Dances.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-@model IEnumerable<m4d.ViewModels.SongCounts>
+@model IEnumerable<m4dModels.SongCounts>
 <hgroup>
     <h2>Dances</h2>
 </hgroup>
